@@ -39,7 +39,8 @@ import java.io.PrintStream;
  *     Ported from JVMDI.
  *
  * @library /test/lib
- * @run main/othervm/native -agentlib:fieldacc03 fieldacc03
+ * @compile --enable-preview -source ${jdk.version} fieldacc03.java
+ * @run main/othervm/native --enable-preview -agentlib:fieldacc03 fieldacc03
  */
 
 
